# tarotarot-ai-backend

./: .dockerignore  .env.example  .gitignore  .ruff.toml  .wget-hsts  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  on_start.sh  on_stop.sh  pyproject.toml  pytest.ini  requirements.txt
.lightning/: on_start.sh
.lightning_studio/: on_start.sh  on_stop.sh
ollama_root/: start_ollama.sh
taro/: app.py  demo_supabase.ipynb  pytest.ini
taro/config/: agent.yaml  constants.yaml
taro/src/: agent_state.py  client.py  config.py  data_models.py  data_pipeline.py  helper.py  llm_model.py  model_chain.py  model_client.py  schemas.py
taro/src/agent/: agents.py  base.py  client.py
taro/src/api/: astrology.py
taro/src/schemas/: __init__.py  astrology.py  tarot.py  user.py
taro/templates/: agent.yaml  constants.yaml
taro/tests/: test_app.py  test_data_models.py  test_model_chain.py
taro/utils/: handler.py  settings.py  woodpecker.py
tests/: test_app.py  test_data_models.py
